Talla EG added and month updated

--- a/src/app/components/register-offcanvas/register-offcanvas.component.html
+++ b/src/app/components/register-offcanvas/register-offcanvas.component.html
@@ -70,6 +70,7 @@
                     <option value="CH">CH</option>
                     <option value="M">M</option>
                     <option value="G">G</option>
+                    <option value="EG">EG</option>
                 </select>
             </div>
             <hr>
